Add two CSS design alternatives

--- a/contact.html
+++ b/contact.html
@@ -4,32 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDHL | Get in contact with the Mighty Ducks Hockey League</title>
+    <title>Contact | Get in touch with the MDHL</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style1.css">
+    <!-- <link rel="stylesheet" href="css/style2.css"> -->
 </head>
 
 <body>
     <header>
-        <figure>
-            <img src="./assets/img/logo.png" alt="MDHL logo" width="150">
-        </figure>
         <h1>Mighty Ducks Hockey League</h1>
+        <figure>
+            <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
+            <img id="banner2" src="./assets/img/banner-2.jpg" alt="banner">
+        </figure>
+        <figure>
+            <img id="logo" src="./assets/img/logo.png" alt="MDHL logo">
+        </figure>
         <nav>
-            <a href="./index.html">Home</a> |
-            <a href="./about.html">About MDHL</a> |
-            <a href="#">Contact</a>
+            <a id="a1" href="./index.html">Home</a>
+            <a id="a2" href="./about.html">About <span class="mdhl">MDHL</span></a>
+            <a id="a3" href="#">Contact</a>
         </nav>
     </header>
 
     <main>
         <figure>
-            <img src="./assets/img/hockey-3.jpg" alt="Picture of Helena Gutierrez and Cassidy 'Rocketfire' Chasez"
-                width=150>
+            <img src="./assets/img/hockey-3.jpg" alt="Picture of Helena Gutierrez and Cassidy 'Rocketfire' Chasez">
         </figure>
-        <div>
-            <p> Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-            <p>We reply to your email as soon as we can.</p>
-        </div>
+        <section>
+            <h2>Contact</h2>
+            <div>
+                <p> Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                <p>We reply to your email as soon as we can.</p>
+            </div>
+        </section>
     </main>
 
 </body>
