--- a/index.html
+++ b/index.html
@@ -4,26 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDHL | The Official Website of the Mighty Ducks Hockey League</title>
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <title>Home | Welcome to the MDHL Official Website</title>
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style1.css">
+    <!-- <link rel="stylesheet" href="css/style2.css"> -->
 </head>
 
 <body>
     <header>
-        <figure>
-            <img src="./assets/img/logo.png" alt="MDHL logo" width="150">
-        </figure>
         <h1>Mighty Ducks Hockey League</h1>
+        <figure>
+            <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
+            <img id="banner2" src="./assets/img/banner-2.jpg" alt="banner">
+
+        </figure>
+        <figure>
+            <img id="logo" src="./assets/img/logo.png" alt="MDHL logo">
+        </figure>
         <nav>
-            <a href="#">Home</a> |
-            <a href="./about.html">About MDHL</a> |
-            <a href="./contact.html">Contact</a>
+            <a id="a1" href="#">Home</a>
+            <a id="a2" href="./about.html">About <span class="mdhl">MDHL</span></a>
+            <a id="a3" href="./contact.html">Contact</a>
         </nav>
     </header>
 
     <main>
         <figure>
-            <img src="./assets/img/hockey-1.jpg" alt="Picture of Sidney 'Thunderbolt' Logan" width=150>
+            <img src="./assets/img/hockey-1.jpg" alt="Picture of Sidney 'Thunderbolt' Logan">
         </figure>
         <section>
             <h2>Upcoming Events</h2>
