--- a/about.html
+++ b/about.html
@@ -4,33 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDHL | About the Mighty Ducks Hockey League</title>
+    <title>About | MDHL information</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style1.css">
+    <!-- <link rel="stylesheet" href="css/style2.css"> -->
 </head>
 
 <body>
     <header>
-        <figure>
-            <img src="./assets/img/logo.png" alt="MDHL logo" width="150">
-        </figure>
         <h1>Mighty Ducks Hockey League</h1>
+        <figure>
+            <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
+            <img id="banner2" src="./assets/img/banner-2.jpg" alt="banner">
+        </figure>
+        <figure>
+            <img id="logo" src="./assets/img/logo.png" alt="MDHL logo">
+        </figure>
         <nav>
-            <a href="./index.html">Home</a> |
-            <a href="#">About MDHL</a> |
-            <a href="./contact.html">Contact</a>
+            <a id="a1" href="./index.html">Home</a>
+            <a id="a2" href="#">About <span class="mdhl">MDHL</span></a>
+            <a id="a3" href="./contact.html">Contact</a>
         </nav>
     </header>
 
     <main>
         <figure>
-            <img src="./assets/img/hockey-2.jpg" alt="Picture of Sheena Monningham" width=150>
+            <img src="./assets/img/hockey-2.jpg" alt="Picture of Sheena Monningham">
         </figure>
         <section>
-            <h2>Upcoming Events</h2>
+            <h2>About <span class="mdhl">MDHL</span></h2>
             <article>
                 <h3>Mision</h3>
-                <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
-                    learning and playing soccer, with opportunities to learn and practice skills related to the game of
+                <p>To support young athletes living Chicago's northside neighborhood, who have an interest in learning
+                    and playing soccer, with opportunities to learn and practice skills related to the game of
                     hockey, specifically those skills around team cooperation and good sportsmanship.</p>
             </article>
             <article>
