Add comments and change some px values ​​to rem

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         </figure>
         <section>
             <h2>Contact</h2>
-            <div>
+            <div class="contact">
                 <p> Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                 <p>We reply to your email as soon as we can.</p>
             </div>
