--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Welcome to the MDHL Official Website</title>
+    <title>Home | MDHL Official Website</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style1.css">
     <!-- <link rel="stylesheet" href="css/style2.css"> -->
@@ -34,18 +34,20 @@
         </figure>
         <section>
             <h2>Upcoming Events</h2>
-            <article>
-                <h3>August 4</h3>
-                <p>MDSL Fundraiser</p>
-            </article>
-            <article>
-                <h3>August 16</h3>
-                <p>Season Kick-off: Meet the Teams</p>
-            </article>
-            <article>
-                <h3>September 1</h3>
-                <p>First Game of the Season (Check Game Schedule for details)</p>
-            </article>
+            <div class="events">
+                <article>
+                    <h3>August 4</h3>
+                    <p>MDSL Fundraiser</p>
+                </article>
+                <article>
+                    <h3>August 16</h3>
+                    <p>Season Kick-off: Meet the Teams</p>
+                </article>
+                <article>
+                    <h3>September 1</h3>
+                    <p>First Game of the Season (Check Game Schedule for details)</p>
+                </article>
+            </div>
         </section>
     </main>
 </body>
