--- a/about.html
+++ b/about.html
@@ -4,36 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | MDHL information</title>
+    <title>About | MDHL Information</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style1.css">
-    <!-- <link rel="stylesheet" href="css/style2.css"> -->
+    <link rel="stylesheet" href="css/style3.css">
 </head>
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <div class="container-title">
+            <h1>Mighty Ducks Hockey League</h1>
+            <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+        </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
             <img id="banner2" src="./assets/img/banner-2.jpg" alt="banner">
-        </figure>
-        <figure>
-            <img id="logo" src="./assets/img/logo.png" alt="MDHL logo">
         </figure>
         <nav>
             <a id="a1" href="./index.html">Home</a>
             <a id="a2" href="#">About <span class="mdhl">MDHL</span></a>
             <a id="a3" href="./contact.html">Contact</a>
+            <a id="a4" href="./game_info.html">Schedule</a>
+            <a id="a5" href="./rules.html">Rules & Policies</a>
         </nav>
     </header>
 
     <main>
-        <figure>
-            <img src="./assets/img/hockey-2.jpg" alt="Picture of Sheena Monningham">
-        </figure>
-        <section>
-            <h2>About <span class="mdhl">MDHL</span></h2>
-            <div class="about">
+        <section class="main-title">
+            <h2>About MDHL</h2>
+        </section>
+        <div class="about">
+            <figure>
+                <img src="./assets/img/hockey-2.jpg" alt="Picture of Sheena Monningham">
+            </figure>
+            <div class="article-about">
                 <article>
                     <h3>Mision</h3>
                     <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
@@ -51,11 +54,12 @@
                     <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
                         Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
                         member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+                        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time
+                        of
                         parents and previous league members.</p>
                 </article>
             </div>
-        </section>
+        </div>
     </main>
 </body>
 
