--- a/contact.html
+++ b/contact.html
@@ -6,37 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Get in touch with the MDHL</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style1.css">
-    <!-- <link rel="stylesheet" href="css/style2.css"> -->
+    <link rel="stylesheet" href="css/style3.css">
 </head>
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <div class="container-title">
+            <h1>Mighty Ducks Hockey League</h1>
+            <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+        </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
             <img id="banner2" src="./assets/img/banner-2.jpg" alt="banner">
-        </figure>
-        <figure>
-            <img id="logo" src="./assets/img/logo.png" alt="MDHL logo">
         </figure>
         <nav>
             <a id="a1" href="./index.html">Home</a>
             <a id="a2" href="./about.html">About <span class="mdhl">MDHL</span></a>
             <a id="a3" href="#">Contact</a>
+            <a id="a4" href="./game_info.html">Schedule</a>
+            <a id="a5" href="./rules.html">Rules & Policies</a>
         </nav>
     </header>
 
     <main>
-        <figure>
-            <img src="./assets/img/hockey-3.jpg" alt="Picture of Helena Gutierrez and Cassidy 'Rocketfire' Chasez">
-        </figure>
-        <section>
+        <section class="main-title">
             <h2>Contact</h2>
+        </section>
             <div class="contact">
-                <p> Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                <p>We reply to your email as soon as we can.</p>
-            </div>
+                <figure>
+                    <img id="bigger-picture" src="./assets/img/hockey-3.jpg" alt="Picture of Helena Gutierrez and Cassidy 'Rocketfire' Chasez">
+                </figure>
+                <div class="article-contact">
+                    <div>
+                        <p> Please email us at <a class="link" href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                    </div>
+                    <div>
+                        <p>We reply to your email as soon as we can.</p>
+                    </div>
+                </div>
         </section>
     </main>
 
