--- a/index.html
+++ b/index.html
@@ -6,48 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | MDHL Official Website</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style1.css">
-    <!-- <link rel="stylesheet" href="css/style2.css"> -->
+    <link rel="stylesheet" href="css/style3.css">
 </head>
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <div class="container-title">
+            <h1>Mighty Ducks Hockey League</h1>
+            <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+        </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
             <img id="banner2" src="./assets/img/banner-2.jpg" alt="banner">
-
-        </figure>
-        <figure>
-            <img id="logo" src="./assets/img/logo.png" alt="MDHL logo">
         </figure>
         <nav>
             <a id="a1" href="#">Home</a>
             <a id="a2" href="./about.html">About <span class="mdhl">MDHL</span></a>
             <a id="a3" href="./contact.html">Contact</a>
+            <a id="a4" href="./game_info.html">Schedule</a>
+            <a id="a5" href="./rules.html">Rules & Policies</a>
         </nav>
     </header>
 
     <main>
-        <figure>
-            <img src="./assets/img/hockey-1.jpg" alt="Picture of Sidney 'Thunderbolt' Logan">
-        </figure>
-        <section>
+        <section class= "main-title">
             <h2>Upcoming Events</h2>
+        </section>
             <div class="events">
-                <article>
-                    <h3>August 4</h3>
-                    <p>MDSL Fundraiser</p>
-                </article>
-                <article>
-                    <h3>August 16</h3>
-                    <p>Season Kick-off: Meet the Teams</p>
-                </article>
-                <article>
-                    <h3>September 1</h3>
-                    <p>First Game of the Season (Check Game Schedule for details)</p>
-                </article>
-            </div>
+                <figure>
+                    <img src="./assets/img/hockey-1.jpg" alt="Picture of Sidney 'Thunderbolt' Logan">
+                </figure>
+                <div class="article-home">
+                    <article>
+                        <h3>August 4</h3>
+                        <p>MDSL Fundraiser</p>
+                    </article>
+                    <article>
+                        <h3>August 16</h3>
+                        <p>Season Kick-off: Meet the Teams</p>
+                    </article>
+                    <article>
+                        <h3>September 1</h3>
+                        <p>First Game of the Season (Check Game Schedule for details)</p>
+                    </article>
+                </div>
         </section>
     </main>
 </body>
