--- a/contact.html
+++ b/contact.html
@@ -32,19 +32,20 @@
         <section class="main-title">
             <h2>Contact</h2>
         </section>
-            <div class="contact">
-                <figure>
-                    <img id="bigger-picture" src="./assets/img/hockey-3.jpg" alt="Picture of Helena Gutierrez and Cassidy 'Rocketfire' Chasez">
-                </figure>
-                <div class="article-contact">
-                    <div>
-                        <p> Please email us at <a class="link" href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                    </div>
-                    <div>
-                        <p>We reply to your email as soon as we can.</p>
-                    </div>
+        <div class="contact">
+            <figure>
+                <img id="bigger-picture" src="./assets/img/hockey-3.jpg"
+                    alt="Picture of Helena Gutierrez and Cassidy 'Rocketfire' Chasez">
+            </figure>
+            <div class="article-contact">
+                <div>
+                    <p> Please email us at <a class="link" href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                 </div>
-        </section>
+                <div>
+                    <p>We reply to your email as soon as we can.</p>
+                </div>
+            </div>
+        </div>
     </main>
 
 </body>
