--- a/game_info.html
+++ b/game_info.html
@@ -32,7 +32,7 @@
         <section class="main-title">
             <h2>Fall Schedule</h2>
         </section>
-        <section class="game_info">
+        <div class="game_info">
             <table id="table-game_info">
                 <caption>* All games take place on Saturday.</caption>
                 <colgroup>
@@ -45,7 +45,7 @@
                         <th>Teams</th>
                         <th>Location</th>
                         <th>Times</th>
-                        </th>
+                    </tr>
                 </thead>
                 <tbody>
                     <tr>
@@ -100,19 +100,19 @@
                     </tr>
                 </tbody>
             </table>
-        </section>
+        </div>
         <div class="container-game_info">
             <p><strong>Facility Type:&nbsp;</strong>Outdoor</p>
-            <p><strong>Additional Information:&nbsp;</strong> If deemed necessary by MDHL games may be shortened or cancelled
-                due to extreme weather conditions.</p>
+            <p><strong>Additional Information:&nbsp;</strong> If deemed necessary by MDHL games may be shortened or
+                cancelled due to extreme weather conditions.</p>
             <p class="contact-game_info"><strong>Please direct all questions to:&nbsp;</strong>Michael Randall, League
                 Coordinator</p>
             <div id="contact-columns">
-                <p><strong>Phone:&nbsp;</strong>(630) 690-8132</p>
-                <p><strong>Email:&nbsp;</strong><a class="link" href="mailto: michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
+                <p><strong>Phone:</strong>&nbsp;(630) 690-8132</p>
+                <p><strong>Email:</strong><a class="link"
+                        href="mailto:michael.randall@chihockey.org">&nbsp;michael.randall@chihockey.org</a></p>
             </div>
         </div>
-        </section>
     </main>
 
 
