Add form and maps

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
             <a id="a3" href="#">Contact</a>
             <a id="a4" href="./game_info.html">Schedule</a>
             <a id="a5" href="./rules.html">Rules & Policies</a>
+            <a id="a6" href="./form.html">Registration Form</a>
+
         </nav>
     </header>
 
