--- a/rules.html
+++ b/rules.html
@@ -25,6 +25,8 @@
             <a id="a3" href="./contact.html">Contact</a>
             <a id="a4" href="./game_info.html">Schedule</a>
             <a id="a5" href="#">Rules & Policies</a>
+            <a id="a6" href="./form.html">Registration Form</a>
+
         </nav>
     </header>
 
